mule-user-guide/v/3.2/configuring-security.adoc
= Configuring Security

Mule ESB allows you to authenticate requests via endpoints using transport-specific or generic authentication methods. It also allows you to control method-level authorization on your service components. The Security Manager is responsible for authenticating requests based on one or more security providers. All security is pluggable via the http://www.mulesoft.org/docs/site/current/apidocs/org/mule/api/security/package-summary.html[Mule security API], so you can easily plug in custom implementations.

For information on the elements you can configure for the Security Manager, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/security-manager-configuration-reference[Security Manager Configuration Reference]. The following sections provide links to information on configuring different types of security managers.

== Spring Security 3.0

Spring Security is the next version of Acegi and provides a number of authentication and authorization providers such as JAAS, LDAP, CAS (Yale Central Authentication service), and DAO. The following topics will help you get started securing your services using Spring Security:

* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/configuring-the-spring-security-manager[Configuring the Spring Security Manager]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/component-authorization-using-spring-security[Component Authorization Using Spring Security]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/setting-up-ldap-provider-for-spring-security[Setting up LDAP Provider for Spring Security]

== Acegi

NOTE:
Acegi is replaced by Spring Security and deprecated. It is not supported in future versions of Mule.

Acegi provides a number of authentication and authorization providers such as JAAS, LDAP, CAS (Yale Central Authentication service), and DAO. The following topics will help you get started securing your services using Acegi:

* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/configuring-the-acegi-security-manager[Configuring the Acegi Security Manager]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/component-authorization-using-acegi[Component Authorization Using Acegi]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/setting-up-ldap-provider-for-acegi[Setting up LDAP Provider for Acegi]

== WS-Security and SAML

WS-Security is a standard protocol for applying security to Web services. It contains specifications on how integrity and confidentiality in a SOAP message can be enforced via XML signatures and binary security tokens such as X.509 certificates and Kerberos tickets as well as encryption headers. It ensures end-to-end security by working in the application layer as opposed to the transport layer. Mule provides the following resources for WS-Security:

* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/ws-security-example[WS-Security Example] The WS-Security example demonstrates the different possibilities available for incorporating WS-Security into your Mule application. This example is available in the enterprise edition of Mule as of version 2.2.3.
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/enabling-ws-security[Enabling WS-Security] - Describes how to secure your CXF SOAP endpoints with WS-Security.
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/saml-module[SAML Module] - Mule now supports the SAML standard for exchange of security information between systems. This module is available in the enterprise edition of Mule as of version 2.2.3

== Other Security Integration

Mule also supports the following security technologies:

* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/encryption-strategies[Encryption Strategies] - Secure your messages by encrypting them.
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/pgp-security[PGP Security] - Secure your messages by encrypting them with PGP.
* link:https://docs.mulesoft.com/mule-user-guide/v/3.2/jaas-security[Jaas Security]
